Fixed wrong position of name on y-axis on line chart

--- a/style/styles.css
+++ b/style/styles.css
@@ -201,3 +201,7 @@ h3 {
   justify-content: space-between;
   align-items: center;
 }
+
+.header-lineChart {
+  margin-bottom: 0px;
+}
